2011-01-27  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_reset_user_password): Added PINPAD_SUPPORT.

	* src/gnuk.ld.in: Fix alignment and filling.

2011-01-26  NIIBE Yutaka  <gniibe@fsij.org>

	* boards/STBEE/mcuconf.h: New.
	* boards/STBEE/board.mk: New.
	* boards/STBEE/board.h: New.
	* boards/STBEE/board.c: New.

	* tool/dfuse.py (DFU_STM32.verify): Add double ll_clear_status.

	* src/configure (target): Add STBEE.

2011-01-25  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_pso): Support DigestInfo by MD5 (for opensc).

2011-01-22  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_pgp_gakp): Handle case of non-extended Lc.
	(cmd_select_file): Return DF name when FCI is requested.

	* src/openpgp-do.c (copy_do): Don't add tag if not requested.

	* src/gnuk.h (memmove): Add declaration.

2011-01-21  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (copy_do): Fix off-by-one error.

	* src/openpgp.c (get_pinpad_input): Ifdef-out PINPAD_SUPPORT.

2011-01-19  NIIBE Yutaka  <gniibe@fsij.org>

	* Version 0.8.

	* src/pin-cir.c (pin_main): Fix typo, call cir_ext_disable.

	* src/usb_prop.c (gnukStringSerial): Updated.

	* src/pin-dial.c: New.

	* boards/STBEE_MINI/board.c (hwinit1): Add PINPAD_DIAL_SUPPORT.
	(dial_sw_disable, dial_sw_enable, EXTI2_IRQHandler): New.

	* src/gnuk.h: Add PINPAD_DIAL_SUPPORT.

	* src/usb-icc.c (icc_handle_data): Handle PIN modification.

	* src/usb_desc.c (gnukConfigDescriptor): bPinSupport = 3 when
	PINPAD_DIAL_SUPPORT is enabled.

2011-01-18  NIIBE Yutaka  <gniibe@fsij.org>

	* src/pin-cir.c (pin_main): Call cir_ext_disable at the end.

2011-01-17  NIIBE Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (PIN_INPUT_CURRENT, PIN_INPUT_NEW)
	(PIN_INPUT_CONFIRM): New.

	* src/pin-cir.c (pin_main): New argument MSG_CODE.

	* src/openpgp.c (get_pinpad_input): New.
	(cmd_verify): Use get_pinpad_input.
	(cmd_change_password): Added PINPAD_SUPPORT.

	* src/openpgp.c (cmd_nop): Removed.
