@@ -5,7 +5,7 @@ Gnuk NEWS - User visible changes
   Released 2011-01-XX, by NIIBE Yutaka
 
 ** Better interoperability to OpenSC.
-Gnuk is not yet supported by OpenSC, but it should be.  With the
+Gnuk is not yet supported by OpenSC, but it could be.  With the
 changes in Gnuk, it could be relatively easily possible to support
 Gnuk Token by OpenSC with a few changes to libopensc/card-openpgp.c,
 and libopensc/pkcs15-openpgp.c.
