@@ -1,6 +1,9 @@
 2011-01-27  NIIBE Yutaka  <gniibe@fsij.org>
 
-	* src/openpgp.c (cmd_reset_user_password): Added PINPAD_SUPPORT.
+	* src/openpgp-do.c (gpg_do_table): Exclude GPG_DO_CH_CERTIFICATE
+	for now.
+
+	* src/openpgp.c (cmd_reset_user_password): Add PINPAD_SUPPORT.
 
 	* src/gnuk.ld.in: Fix alignment and filling.
 
